--- a/site/index.html
+++ b/site/index.html
@@ -1,6 +1,18 @@
 <html>
-	<head></head>
+	<head>
+		<link href="a2css.css" rel="stylesheet">
+	</head>
 	<body>
-		<h1>	My first Page</h1>
+		<h1>My first Page</h1>
+		<section class="col-lg-4 col-md-6 col-sm-12">
+		<div id="sec1">Title 1</div><br>
+		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</section>
+		<section class="col-lg-4 col-md-6 col-sm-12">
+		<div id="sec2">Title 2</div><br>
+		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</section>
+		<section  class="col-lg-4 col-md-12 col-sm-12">
+		<div id="sec3">Title 3</div><br>
+		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</section>
+
 	</body>
 </html>
