--- a/site/index.html
+++ b/site/index.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<link href="a2css.css" rel="stylesheet">
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
 		<h1>My first Page</h1>
